correccion para evitar que se dupliquen casos de prueba al agregar mas

--- a/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
+++ b/src/main/webapp/pages/funcionalidad/template_funcionalidad.xhtml
@@ -71,7 +71,7 @@
                       draggable="false" resizable="false" showEffect="fade"
                       hideEffect="fade">
                 <p:messages id="errorCasoPrueba" showDetail="true" autoUpdate="true" closable="true"/>
-                <h:form>º
+                <h:form>
                     <h:panelGrid columns="4" width="100%">
                         <h:outputLabel value="Nombre del Caso de Prueba *"
                                        for="nombreFuncionalidad" />
